# 2026-rebuilt-robot

./: .gitignore  README.md  TODO.md  constants.py  elastic-layout-driver.json  enable_Intake.py  indexerCommand.py  intake.py  intakeCommand.py  physics.py  pyproject.toml  robot.py  robotcontainer.py  shooter.py  shooterCommand.py  simgui-ds.json  telemetry.py
.claude/: settings.local.json
commands/: FlywheelVelocityCommand.py  LEDrainbow.py  ShooterCommand.py  VisionAlignTarget.py  VisionTrackTargetPair.py  __init__.py  changeSpeedFlywheel.py  climberCommand.py  enable_Flywheel.py  fireinthehole.py  flywheelCommand.py  flywheelStopCommand.py  indexerCommand.py  intakeCommand.py  ledcommand.py  resetPDHStickyFaults.py  timedIndexer.py  update_speed_variable.py
deploy/: elastic-layout.json
deploy/pathplanner/: settings.json
deploy/pathplanner/autos/: Climber Test 1.auto  Left auto.auto  Left-start.auto  Mid auto.auto  Mid-start.auto  Righ-start.auto  Right auto.auto  Right driver auto 3.auto  Right-start-moving-shoot-then-pass-back-1-loop.auto  Right-start-pickup-shoot-twice.auto  Right-start.auto  Tests.auto  get+shoot+get fuel+climb.auto  mid-climber.auto  midfieldshoot.auto  outpost auto blue.auto  test-mid-start.auto
deploy/pathplanner/paths/: Mid auto 1.path  Part_1.path  Part_2.path  Part_3.path  Right auto 1.path  Right auto 2.path  Right auto 3.path  Right auto 4.path  Right auto 5.path  Right auto 6.path  Right auto 7.path  Top blue auto 1.path  Top blue auto 2.path  Top blue auto 3.path  Top blue auto 4.path  Top blue auto 5.path  back up.path  climber-adjust.path  climber-return.path  climber-to-tower.path  corral-to-left-shoot.path  corral-to-mid-shoot.path  depot-to-right-shoot.path  left-shoot-to-corral.path  left-shoot-to-mid-left.path  left-start-to-left-shoot.path  lester test pt1 get balls.path  mid-left-to-left.path  (+23 more)
subsystems/: VisionSubsystem.py  __init__.py  climber.py  command_swerve_drivetrain.py  evil lazers.py  intake.py  ledsubsystem.py  shooter.py  shooter_subsystem.py  tunable_shooter.py
tools/: distance_solver.py
utils/: logger.py
vision_metrics/: __init__.py  constants.py  pose_estimator.py  pose_metrics.py  tag_detection_metrics.py
