#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-corps-2026"
version = "0.9.0"
description = "Lambda Corps FRC 2026 Robot Code"

[tool.setuptools]
packages = ["commands", "subsystems"]

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.2.1.1"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
components = [
    # "all",
    "commands2",
    # "cscore",
    # "navx",
    # "phoenix5",
    # "playingwithfusion",
    # "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install
requires = [
    "phoenix6~=26.1",
    "robotpy_pathplannerlib~=2026.1.2",
    "photonlibpy>=2026.2.2"
]

# Exclude specific folders from deployment
exclude = [
    "tests",
    "sim_data",
    "*.log",
    "*.pdf",
    "*.zip"
]